@@ -1329,6 +1329,22 @@ Info: This package contains a file named <tt>mimeinfo.cache</tt>,
  included in a package since it needs to be generated dynamically based on
  the installed .desktop files on the system.
 
+Tag: package-contains-cmake-private-file
+Severity: important
+Certainty: certain
+Ref: https://wiki.debian.org/CMake, http://www.cmake.org/cmake/help/v3.2/manual/cmake-packages.7.html#config-file-packages
+Info: This package contains a file in a path reserved solely for
+ <tt>CMake</tt>. This normally means you are shipping a <tt>Find</tt>
+ module. Libraries should not ship Find modules at all but Config files
+ instead.
+ .
+ The Config files should be installed in the unversioned path
+ usr/(lib/&lt;arch&gt;|lib|share)/cmake/&lt;name&gt;*/
+ .
+ By using CMake Config files in the unversioned path, the package will
+ continue to work as expected when a new version of CMake is uploaded.
+
+
 Tag: package-modifies-ld.so-search-path
 Severity: important
 Certainty: possible
